Fix element spacing in WYSIWYG

--- a/boilerplate/public_html/themes/custom/{{ NAME }}/src/sass/components/text-body.scss
+++ b/boilerplate/public_html/themes/custom/{{ NAME }}/src/sass/components/text-body.scss
@@ -33,7 +33,8 @@
       list-style-type: decimal;
   }
 
-  li {
+  li,
+  br {
     margin-top: 0;
   }
 
